week2/styles/prophets.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
body {
    font-family: Arial, sans-serif;
    background-color: #f4f4f4;
    color: #333;
    line-height: 1.6;
    padding: 20px;
    min-width: 380px;
}
header {
    background: #50b3a2;
    color: #fff;
    padding: 10px 0;
    text-align: center;
    margin-bottom: 20px;
}
#cards {
    display: grid;
        grid-gap: 0.5rem;
        grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
}
#cards section {
    background: #fff;
    border: 1px solid #ddd;
    border-radius: 5px;
    padding: 15px;
    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
    text-align: center;
}
#cards img {
    max-width: 75%;
    height: auto;
    border-radius: 5px;
    margin-top: 10px;
    margin-bottom: 10px;
    box-shadow: 1px 1px 5px rgb(0, 0, 0);

}
#cards h2 {
    margin-bottom: 10px;
    color: #50b3a2;
}
#cards p {
    font-size: 14px;
    color: #666;
}

